# saucybacon

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  SaucyBacon.desktop  TODO.md  manifest.json  manifest.json.in  project-clean.sh  saucybacon  saucybacon.apparmor  saucybacon.desktop  saucybacon.json  saucybacon.qml  saucybacon.qmlproject
app/: CMakeLists.txt  prototypes.js  saucybacon.qml
app/backend/: CMakeLists.txt  Recipe.qml  prototypes.js  sync.js
app/components/: CMakeLists.txt  Camera.qml  CategorySelector.qml  CategorySelectorDelegate.qml  Colors.qml  ImageImport.qml  ImageWithFallback.qml  ImageWithLabel.qml  IngredientInput.qml  IngredientLayout.qml  LoadingIndicator.qml  PhotoChooser.qml  PhotoLayout.qml  Previewer.qml  Recipe.qml  RecipeListItem.qml  RecipeSquareListItem.qml  RefreshableListView.qml  SidePanelContent.qml  Sidebar.qml  SquareListItem.qml  StandardWithCount.qml  SwipeArea.qml  TimePicker.qml  VerticalDivider.qml  WelcomeItem.qml
app/models/: BaseModel.qml
app/tests/autopilot/saucybacon/: __init__.py  emulators.py
app/tests/autopilot/saucybacon/tests/: __init__.py  test_saucybacon.py
app/tests/unit/: tst_hellocomponent.qml
app/ui/: AboutPage.qml  CMakeLists.txt  CameraPage.qml  DeleteDialog.qml  EditPage.qml  EditRecipePage.qml  HomePage.qml  NewCategoryDialog.qml  NewRecipePage.qml  RecipeListPage.qml  RecipeListPageToolbar.qml  RecipePage.qml  RecipePageToolbar.qml  SearchPage.qml  WebPage.qml
app/ui/dialogs/: CMakeLists.txt  CategoryDialog.qml  DeleteDialog.qml  NewCategoryDialog.qml
backend/: CMakeLists.txt
backend/modules/SaucyBacon/: ApiKeys.cpp  ApiKeys.h  Database.cpp  Database.h  Plugin.cpp  Plugin.h  QueryThread.cpp  QueryThread.h  Recipe.cpp  Recipe.h  RecipeParser.cpp  RecipeParser.h  RecipeSearch.cpp  RecipeSearch.h  Utils.cpp  Utils.h  qmldir
backend/tests/unit/: tst_mytype.qml
cmake/: Click.cmake  FindU1db.cmake
components/: Camera.qml  DifficultySelector.qml  ImageChooser.qml  IngredientInput.qml  IngredientLayout.qml  PhotoChooser.qml  PhotoLayout.qml  Recipe.qml  RecipeItem.qml  RecipeListItem.qml  Selector.qml
graphics/: CMakeLists.txt
js/: database.js
modules/: CMakeLists.txt
modules/SaucyBacon/: ApiKeys.cpp  ApiKeys.h  Backend.cpp  Backend.h  Database.cpp  Database.h  Plugin.cpp  Plugin.h  RecipeParser.cpp  RecipeParser.h  RecipeSearch.cpp  RecipeSearch.h  Utils.cpp  Utils.h  backend.cpp  backend.h  mytype.cpp  mytype.h
po/: CMakeLists.txt  com.ubuntu.developer.gcollura.saucybacon.pot
resources/: CMakeLists.txt  dbschema.sql  saucybacon.desktop  saucybacon.desktop.cmake  saucybacon.desktop.in
resources/graphics/: CMakeLists.txt
tests/autopilot/: run
tests/autopilot/saucybacon/main/: test_main.py
ui/: DeleteDialog.qml  EditRecipePage.qml  NewCategoryDialog.qml  NewRecipePage.qml  RecipeListPage.qml  RecipeListPageToolbar.qml  RecipePage.qml  RecipePageToolbar.qml  SearchPage.qml
